# cergdb

./: .gitignore  .ignore  Cargo.toml  README.md  backup_db.sh  gen_keys.sh  init_db.sh  init_secret.sh
migrations/: 20221005171349_users_table.up.sql  20221005180002_results_table.down.sql  20221005180002_results_table.up.sql
pyclient/: client.py  requirements.txt
src/: error.rs  http_server.rs  lib.rs  main.rs  utils.rs
src/api/: admin.rs  auth.rs  delete.rs  info.rs  mod.rs  rename.rs  results.rs  retrieve.rs  submit.rs  users.rs
src/models/: auth.rs  mod.rs  results.rs
