[package]
name = "cergdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["cors"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "time",
    "uuid",
] }
jsonwebtoken = {version = "8", default-features = false }
once_cell = "1.8"
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
time = { version = "0.3.15", features = ["serde"] }
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
secrecy = { version = "0.8.0", features = ["serde", "alloc"] }
config = "0.13.2"
argonautica = "0.2.0"
thiserror = "1.0.37"
