[package]
name = "cergdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["cors"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "time",
    "uuid",
] }
jsonwebtoken = { version = "8", default-features = false }
once_cell = "1.8"
dotenv = "0.15.0"
log = "0.4.17"
time = { version = "0.3.15", features = ["serde"] }
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
secrecy = { version = "0.8.0", features = ["serde", "alloc"] }
config = "0.13.2"
thiserror = "1.0.37"
rust-argon2 = "1.0.0"
flatten-json-object = "0.6.1"
json_dotpath = "1.1.0"
serde_qs = { version = "0.12.0", features = ["axum", "axum-framework", "tracing"] }
indexmap = "1.9.1"
tracing-appender = "0.2.2"
miette = { version = "5.6.0", features = ["fancy"] }
clap = { version = "4.2.0", features = ["derive", "env"] }
